# research-agents

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  research.bat  research.sh
src/research_agents/: __init__.py  main.py
src/research_agents/agents/: __init__.py  main_agent.py  report_agent.py  research_agent.py  validation_agent.py
src/research_agents/agents/definitions/: main.yaml  report.yaml  research.yaml  validation.yaml
src/research_agents/core/: __init__.py  agent_definition.py  base_agent.py  config.py  database.py  orchestrator.py
src/research_agents/tools/: __init__.py  web_search.py
tests/: conftest.py  test_main.py
tests/agents/: test_main_agent.py  test_report_agent.py  test_research_agent.py  test_validation_agent.py
tests/core/: test_agent_definition.py  test_base_agent.py  test_config.py  test_database.py  test_orchestrator.py
tests/integration/: conftest.py  test_agent_workflow.py  test_database_integration.py  test_end_to_end.py
tests/tools/: test_web_search.py
